@@ -48,7 +48,7 @@ transition_id=60
 speed=4
 no_points=7
 points=5;0;0;1;4;-1747.5;-259.5;5;4;-416;-63;2;4;0;-133.25;2;5;-893.5;-145.5;3;5;-1368;-187.25;2.8999999999999999;5;0;0;1;
-text=With Imagination\nyou can have as\nmany movement\nas you want not just one
+text=With Imagination\nyou can have as\nmany movements\nas you want not just one
 anim id=2
 anim duration=4
 text pos=4
